(fix) fix z-index conflict of navigation menu and image composition

--- a/css/style.css
+++ b/css/style.css
@@ -526,7 +526,7 @@ body {
   right: 6rem;
   border-radius: 50%;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.4);
-  z-index: 3;
+  z-index: 4;
   text-align: center;
   cursor: pointer; }
 
@@ -538,7 +538,7 @@ body {
   top: 6.5rem;
   right: 6.5rem;
   background-image: radial-gradient(#7ed56f, #28b485);
-  z-index: 1;
+  z-index: 2;
   transition: transform 0.8s cubic-bezier(0.83, 0, 0.17, 1); }
 
 .navigation__nav {
@@ -585,7 +585,7 @@ body {
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
   width: 100%;
-  z-index: 2; }
+  z-index: 3; }
 
 .navigation__icon {
   position: relative;
