--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -12,7 +12,7 @@
     right: 6rem;
     border-radius: 50%;
     box-shadow: 0 1rem 3rem rgba($color-black, 0.4);
-    z-index: 3;
+    z-index: 4;
     text-align: center;
     cursor: pointer;
   }
@@ -28,7 +28,7 @@
       $color-primary-light,
       $color-primary-dark
     );
-    z-index: 1;
+    z-index: 2;
     transition: transform 0.8s cubic-bezier(0.83, 0, 0.17, 1);
   }
 
@@ -91,7 +91,7 @@
   &__checkbox:checked ~ &__nav {
     opacity: 1;
     width: 100%;
-    z-index: 2;
+    z-index: 3;
   }
 
   // ICON
